--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,12 @@
+input {
+  border-radius: 5px;
+  margin-bottom: 40px;
+}
+
+button {
+    margin-right: 1.5em;
+}
+
 .App {
   text-align: center;
 }
